fix delegates